--- a/20190522/rwd4.css
+++ b/20190522/rwd4.css
@@ -1,4 +1,4 @@
- *  { box-sizing:border-box; padding:0; margin:0; }
+* { box-sizing: border-box; padding: 0; margin: 0; }
 .row::after { content:""; clear:both; display:table; }
 [class*="col-"]{ float:left; padding:10px; } .header,.footer { background-color:lightgray; color:blue; padding:10px; }
 .menu ul, .banner ul { list-style-type:none; }
@@ -6,8 +6,9 @@
 .menu li:hover { background-color:red; }
 .banner li { border:2px solid black; padding:10px; margin-bottom:10px; box-shadow:0 1px 3px gray; }
 .banner li img { width:30%; vertical-align:middle; }
+/* for mobilie */
 [class*="col-"]{width:100%;}
-@media only screen and(min-width:600px) { 
+@media only screen and (min-width:600px) {  /* Fort tablets: */
 .col-t-1 { width:8.33%; }
 .col-t-2 { width:16.66%; }
 .col-t-3 { width:25%; }
@@ -21,7 +22,7 @@
 .col-t-11 { width:91.66%; }
 .col-t-12 { width:100%; }
 }
-@media only screen and(min-width:768px) {
+@media only screen and (min-width:768px) {  /* Fort tablets: */
 .col-1 { width:8.33%; }
 .col-2 { width:16.66%; }
 .col-3 { width:25%; }
